cabal-version:      2.4
name:		    HTerm                
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tilak Chad
maintainer:         Tilak Chad

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable GlobRegex
--    ghc-options:     -Wall
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Glob,
                   FileMatch,
                   Find,
                   Terminal

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0,
                      directory,
                      filepath,
                      containers,
                      process

    hs-source-dirs:   app
    default-language: Haskell2010
